--- a/data.html
+++ b/data.html
@@ -38,10 +38,14 @@
     </header>
     <section class="data">
         <div class="data-figura"></div>
+        <div class="data-figura data-figura-dos"></div>
         <div class="data-header-container">
             <h2 class="data-titulo">DATOS</h2>
-            <p class="data-texto">Conforme he ido desarrollando <strong>BISLAI</strong> he ido generando más y más datos. Algunos datos los he convertido y filtrado a formatos más amigables como JSON y CSV.</p>
+            <p class="data-texto">Conforme he ido desarrollando <strong>BISLAI</strong> he ido generando más y más datos. Algunos datos que he obtenido de organismos oficiales los he convertido y filtrado a formatos más amigables como JSON y CSV.</p>
             <p class="data-texto"><strong>Es hora de compartir lo recolectado.</strong></p>
+            <p class="data-texto"><strong>Todos los datasets están bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</strong></p>
+
+            <a href="https://github.com/bislai/datasets/" class="link-mocion link-mocion-ujarak data-btn">REPOSITORIO GITHUB</a>
         </div>
         <svg class="data-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 80.8 62.8">
             <rect x="18.6" y="25" fill="#3BE4CF" stroke="#000" width="43.9" height="16.1" />
@@ -74,6 +78,9 @@
                     </li>
                     <li class="data-texto-list"><strong>Porcentaje:</strong> porcentaje de votos</li>
                 </ul>
+                <a href="https://github.com/bislai/datasets/tree/master/elecciones-distrito-1987-2015" class="link-mocion link-mocion-ujarak data-btn">GITHUB</a>
+                <a href="https://github.com/bislai/datasets/blob/master/elecciones-distrito-1987-2015/elecciones-csv.zip" class="link-mocion link-mocion-ujarak data-btn">CSV</a>
+                <a href="https://github.com/bislai/datasets/blob/master/elecciones-distrito-1987-2015/elecciones-json.zip" class="link-mocion link-mocion-ujarak data-btn">JSON</a>
             </div>
                     <div class="dataset-image">
                         <pre>
@@ -144,8 +151,8 @@
                         <strong>numero:</strong> número de la moción
                     </li>
                 </ul>
-                <a href="http://github" class="link-mocion link-mocion-ujarak data-btn">DESCARGAR</a>
-                <a href="http://github" class="link-mocion link-mocion-ujarak data-btn">RAW</a>
+                <a href="https://github.com/bislai/datasets/tree/master/mociones" class="link-mocion link-mocion-ujarak data-btn">GITHUB</a>
+                <a href="https://raw.githubusercontent.com/bislai/datasets/master/mociones/mociones.json" class="link-mocion link-mocion-ujarak data-btn">RAW</a>
             </div>
             <div class="dataset-image">
                 <pre>
