--- a/estadisticas.html
+++ b/estadisticas.html
@@ -16,8 +16,9 @@
             <nav class="nav-grid">
                 <a href="http://bislai.co" class="link display-ib nav-grid-first"><span class="link-name">BISLAI</span></a>
                 <div class="nav-grid-second display-ib--m">
-                    <a class="pos-r font-bislai link letter-0-12--m white" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-                    <a class="pos-r font-bislai link letter-0-12--m white" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                    <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                    <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
                 </div>
             </nav>
         </header>
