--- a/buscador.html
+++ b/buscador.html
@@ -28,9 +28,10 @@
                     </form>
             </div>
             <div class="nav-grid-second display-ib--m">
-                <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-                <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
-            </div>
+    <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+    <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
+</div>
         </nav>
     </header>
     <div class="mih-custom maw-60 margin-y1">
