incluyendo link a la ultima mocion y arreglando merge de data

--- a/data.html
+++ b/data.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Bislai - data </title>
@@ -12,7 +11,9 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="css/default.css">
     <script src="js/highlight.pack.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script>
+    hljs.initHighlightingOnLoad();
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600" rel="stylesheet">
 </head>
 
@@ -31,14 +32,10 @@
                 </form>
             </div>
             <div class="nav-grid-second display-ib--m">
-    <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
-<<<<<<< HEAD
-    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">DATOS</span></a>
-=======
-    <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
->>>>>>> 501f8703acfbf4eeb57ff4800150a90ad5d17c4d
-</div>
+                <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
+            </div>
         </nav>
     </header>
     <section class="data">
@@ -49,7 +46,6 @@
             <p class="data-texto">Conforme he ido desarrollando <strong>BISLAI</strong> he ido generando más y más datos. Algunos datos que he obtenido de organismos oficiales los he convertido y filtrado a formatos más amigables como JSON y CSV.</p>
             <p class="data-texto"><strong>Es hora de compartir lo recolectado.</strong></p>
             <p class="data-texto"><strong>Todos los datasets están bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</strong></p>
-
             <a href="https://github.com/bislai/datasets/" class="link-mocion link-mocion-ujarak data-btn">REPOSITORIO GITHUB</a>
         </div>
         <svg class="data-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 80.8 62.8">
@@ -87,8 +83,8 @@
                 <a href="https://github.com/bislai/datasets/blob/master/elecciones-distrito-1987-2015/elecciones-csv.zip" class="link-mocion link-mocion-ujarak data-btn">CSV</a>
                 <a href="https://github.com/bislai/datasets/blob/master/elecciones-distrito-1987-2015/elecciones-json.zip" class="link-mocion link-mocion-ujarak data-btn">JSON</a>
             </div>
-                    <div class="dataset-image">
-                        <pre>
+            <div class="dataset-image">
+                <pre>
                             <code class="json">
     var elecciones = [{
         "2015": {
@@ -111,7 +107,7 @@
         }]
                             </code>
                     </pre>
-                    </div>
+            </div>
         </article>
     </section>
     <section class="dataset">
