corrigiendo enlace de mociones al repositorio de github

--- a/data.html
+++ b/data.html
@@ -152,8 +152,8 @@
                         <strong>numero:</strong> número de la moción
                     </li>
                 </ul>
-                <a href="https://github.com/bislai/datasets/tree/master/mociones" class="link-mocion link-mocion-ujarak data-btn">GITHUB</a>
-                <a href="https://raw.githubusercontent.com/bislai/datasets/master/mociones/mociones.json" class="link-mocion link-mocion-ujarak data-btn">RAW</a>
+                <a href="https://github.com/bislai/datasets" class="link-mocion link-mocion-ujarak data-btn">GITHUB</a>
+                <a href="https://raw.githubusercontent.com/bislai/datasets/master/tritura-mociones/mociones/mociones.json" class="link-mocion link-mocion-ujarak data-btn">RAW</a>
             </div>
             <div class="dataset-image">
                 <pre>
