terminando de desacoplar astral :cry:

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="column blue-light">
         <header class="header header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="link display-ib nav-grid-first"><span class="link-name">BISLAI</span></a>
-                <div class="nav-grid-second display-ib--m">
-                    <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-                    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
-                    <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
+                <a href="http://bislai.co" class="nav-grid-first"><span class="link-name">BISLAI</span></a>
+                <div class="nav-grid-second">
+                    <a class="nav-grid-second-link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                    <a class="nav-grid-second-link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                    <a class="nav-grid-second-link" href="/data"><span class="link-name">DATOS</span></a>
                 </div>
             </nav>
         </header>
@@ -62,9 +62,9 @@
             </div>
         </div>
     </div>
-    <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-4-0--l mih-100">
-        <h2 class="maw-60 margin-b2 font-bislai tabs-title">CALENDARIO DE PLENOS</h2>
-        <p class="maw-60 margin-t1 margin-b2">Este calendario recoge todas las <strong>mociones ordinarias</strong> que se han presentado desde 2015 en el pleno del Ayuntamiento de Zaragoza.</p>
+    <section class="calendario-plenos">
+        <h2 class="maw-60 calendario-plenos-titulo">CALENDARIO DE PLENOS</h2>
+        <p class="maw-60 calendario-plenos-texto">Este calendario recoge todas las <strong>mociones ordinarias</strong> que se han presentado desde 2015 en el pleno del Ayuntamiento de Zaragoza.</p>
         <article class="maw-60">
             <input class="input-record" id="tab1" type="radio" name="tabs" checked>
             <label class="label-record" for="tab1">2015</label>
