--- a/data.html
+++ b/data.html
@@ -20,7 +20,7 @@
 <body class="mih-100">
     <header class="header">
         <nav class="nav-grid">
-            <a href="http://bislai.co" class="link display-ib nav-grid-first"><span class="link-name">BISLAI</span></a>
+            <a href="http://bislai.co" class="nav-grid-first"><span class="link-name">BISLAI</span></a>
             <div class="contenedor-buscador">
                 <form action="/buscador">
                     <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
@@ -31,10 +31,10 @@
                     </button>
                 </form>
             </div>
-            <div class="nav-grid-second display-ib--m">
-                <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-                <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
-                <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
+            <div class="nav-grid-second">
+                <a class="nav-grid-second-link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                <a class="nav-grid-second-link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                <a class="nav-grid-second-link" href="/data"><span class="link-name">DATOS</span></a>
             </div>
         </nav>
     </header>
