incluyendo clase para que el hover de los enlaces de la cabecera tenga efecto

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -14,11 +14,11 @@
     <div class="column blue-light">
         <header class="header header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="nav-grid-first"><span class="link-name">BISLAI</span></a>
+                <a href="http://bislai.co" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
                 <div class="nav-grid-second">
-                    <a class="nav-grid-second-link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-                    <a class="nav-grid-second-link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
-                    <a class="nav-grid-second-link" href="/data"><span class="link-name">DATOS</span></a>
+                    <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                    <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
                 </div>
             </nav>
         </header>
