--- a/creditos.html
+++ b/creditos.html
@@ -13,7 +13,7 @@
 <body class="mih-100">
     <header class="header">
         <nav class="nav-grid">
-            <a href="http://bislai.co" class="nav-grid-first"><span class="link-name">BISLAI</span></a>
+            <a href="http://bislai.co" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
             <div class="contenedor-buscador">
                     <form action="/buscador">
                         <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
@@ -25,9 +25,9 @@
                     </form>
             </div>
             <div class="nav-grid-second">
-    <a class="nav-grid-second-link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-    <a class="nav-grid-second-link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
-    <a class="nav-grid-second-link" href="/data"><span class="link-name">DATOS</span></a>
+    <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+    <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
 </div>
         </nav>
     </header>
