--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="column blue-light">
         <header class="header header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="nav-grid-first"><span class="link-name">BISLAI</span></a>
+                <a href="http://bislai.co" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
                 <div class="nav-grid-second">
-                    <a class="nav-grid-second-link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
-                    <a class="nav-grid-second-link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
-                    <a class="nav-grid-second-link" href="/data"><span class="link-name">DATOS</span></a>
+                    <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
+                    <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
+                    <a class="nav-grid-second-link link" href="/data"><span class="link-name">DATOS</span></a>
                 </div>
             </nav>
         </header>
@@ -112,6 +112,7 @@
                 <a class="tabla-calendario-link" href="/plenos/2018/02-02-2018">2 de febrero de 2018</a>
                 <a class="tabla-calendario-link" href="/plenos/2018/02-03-2018">2 de marzo de 2018</a>
                 <a class="tabla-calendario-link" href="/plenos/2018/26-03-2018">26 de marzo de 2018</a>
+                <a class="tabla-calendario-link" href="/plenos/2018/04-05-2018">4 de mayo de 2018</a>
             </section>
         </article>
     </section>
