url relativas para la home

--- a/ciudadanos.html
+++ b/ciudadanos.html
@@ -20,7 +20,7 @@
 
     <header class="header">
         <nav class="nav-grid">
-            <a href="http://bislai.co" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
+            <a href="/" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
             <div class="contenedor-buscador">
                     <form action="/buscador">
                         <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
