--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="column blue-light">
         <header class="header header-home">
             <nav class="nav-grid">
-                <a href="http://bislai.co" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
+                <a href="/" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
                 <div class="nav-grid-second">
                     <a class="nav-grid-second-link link" href="/estadisticas"><span class="link-name">ESTADÍSTICAS</span></a>
                     <a class="nav-grid-second-link link" href="/partidos"><span class="link-name">PARTIDOS</span></a>
