--- a/404.html
+++ b/404.html
@@ -11,13 +11,13 @@
     <script type="text/javascript" src="js/tipuesearch_set.js"></script>
     <script type="text/javascript" src="js/tipuesearch.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Playfair+Display" rel="stylesheet">
 </head>
 
 <body class="mih-100">
     <header class="header">
         <nav class="nav-grid">
-            <a href="http://bislai.co" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
+            <a href="/" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
             <div class="contenedor-buscador">
                     <form action="/buscador">
                         <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
