--- a/creditos.html
+++ b/creditos.html
@@ -16,7 +16,7 @@
 <body class="mih-100">
     <header class="header">
         <nav class="nav-grid">
-            <a href="http://bislai.co" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
+            <a href="/" class="link nav-grid-first"><span class="link-name">BISLAI</span></a>
             <div class="contenedor-buscador">
                     <form action="/buscador">
                         <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
