remove astral | new design for stats

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -22,22 +22,12 @@
                 </div>
             </nav>
         </header>
-        <img src="img/estadisticas3.jpeg" />
-        <div class="bislai-home-body-left-text">
+        <img src="img/stats.jpg"/>
+        <div class="bislai-home-body-left-text bislai-stats">
             <span class="bislai-home-body-left-text-white font-bislai">ESTADÍSTICAS ACUMULADAS</span>
         </div>
-        <div class="bislai-home-card">
-            <div class="bislai-home-card-element">
-                <p class="bislai-home-card-element-text">Esta serie de estadísticas se han hecho a partir de las <span class="font-w8">mociones</span>. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
-            </div>
-            <div class="bislai-home-card-element">
-                <p class="bislai-home-card-element-text">En la estadística de votación a favor no se tiene en cuenta cuando un grupo vota a favor de su propia propuesta.</p>
-            </div>
-            <div class="bislai-home-card-element">
-                <p class="bislai-home-card-element-text">
-                    Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar <strong>4 mociones</strong> por pleno y Zaragoza En Común, como gobierno, <strong>solamente 2</strong>.
-                </p>
-            </div>
+        <div class="bislai-stats-card-element">
+            <p class="bislai-home-card-element-text">En algunas mociones se votan diferentes puntos, así que las estadísticas se han obtenido de la suma de todas las votaciones.</p>
         </div>
     </div>
     <section id='scroll'>
@@ -125,7 +115,7 @@
 
 
             <div class="maw-60">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</div>
-            <p class="maw-60 padding-1-0">© 2018 - Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
+            <p class="maw-60 padding-1-0">© 2016 - 2018 · Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
     <script type="text/javascript" src="js/scrollama.min.js"></script>
