design is never done

--- a/creditos.html
+++ b/creditos.html
@@ -66,6 +66,7 @@
         <li>Photo by Louis Moncouyoux on Unsplash</li>
         <li>Photo by Lukas from Pexels https://www.pexels.com/photo/charts-on-black-wooden-table-669622/</li>
         <li>Rocket by Dev Patel from the Noun Project</li>
+        <li>election poll by Made by Made from the Noun Project</li>
     </ul>
 
     </div>
