--- a/estadisticas.html
+++ b/estadisticas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,13 +23,15 @@
                 </div>
             </nav>
         </header>
-        <img src="img/stats.jpg"/>
-        <div class="bislai-home-body-left-text bislai-stats">
-            <span class="bislai-home-body-left-text-white font-bislai">ESTADÍSTICAS ACUMULADAS</span>
+        <div class="home-position-container home-position-container-stats">
+            <div class="home-image-effect stats">
+                <img class="home-image" alt="una mano de un hombre ayuda a una mano de una mujer introducir un voto en una urna" src="img/stats.jpg" />
+            </div>
+            <div class="home-position-container-claim">
+                <span class="home-position-container-title">ESTADÍSTICAS ACUMULADAS</span> En algunas mociones se votan diferentes puntos, así que las <strong>estadísticas se han obtenido de la suma de todas las votaciones.</strong>
+            </div>
         </div>
-        <div class="bislai-stats-card-element">
-            <p class="bislai-home-card-element-text">En algunas mociones se votan diferentes puntos, así que las estadísticas se han obtenido de la suma de todas las votaciones.</p>
-        </div>
+    </div>
     </div>
     <section id='scroll'>
         <div class='scroll__graphic'>
@@ -111,11 +114,8 @@
             <a href="http://twitter.com/debislai" class="grid-footer-links">TWITTER</a>
             <a href="http://github.com/jorgeatgu/bislai" class="grid-footer-links">GITHUB</a>
         </div>
-
-
-
-            <div class="maw-60">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</div>
-            <p class="maw-60 padding-1-0">© 2016 - 2018 · Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
+        <div class="maw-60">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</div>
+        <p class="maw-60 padding-1-0">© 2016 - 2018 · Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
     <script type="text/javascript" src="js/scrollama.min.js"></script>
