--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +14,7 @@
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Playfair+Display" rel="stylesheet">
 </head>
 
 <body class="mih-100">
@@ -28,40 +29,36 @@
                 </div>
             </nav>
         </header>
-        <img alt="una mano de un hombre ayuda a una mano de una mujer introducir un voto en una urna" src="img/urnas.jpg"/>
-        <div class="bislai-home-body-left-text">
-            <span class="bislai-home-body-left-text-white font-bislai"><span class="line-throught">ACCESIBILIDAD</span> POLÍTICA</span>
-            <div class="bislai-home-body-left-container">
-                <svg width="43" height="75" viewBox="0 0 43 75" class="bislai-icon" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M42 32.7h-5.7c-.3-5.8-4-10-9.8-11.5 2.6-1.6 4.3-4.4 4.3-7.7v-1.2c0-1.2-.2-2.4-.6-3.4 1.3-1 2-2.8 2.2-5 0-1.4 0-3-1-3.4-.5-.2-1 0-1.2.4-.6.6-2.5.2-4.4-.2-2-.5-4.6-1-6.8-.6-5 1-6 5.3-5.7 7.2-.8 1.5-1.2 3-1.2 4.8v1c0 3.5 2 6.3 4.4 8-5.8 1.6-9.6 5.7-9.8 11.5H1c-.6 0-1 .3-1 1V38c0 .6.4 1 1 1h3v35c0 .4.3.8 1 .8h33c.6 0 1-.4 1-1V39.3h3c.6 0 1-.4 1-1v-4.6c0-.6-.4-1-1-1zM19.4 2c2-.3 4 0 6 .6 2 .5 3.8 1 5.2.4 0 .8 0 2-.5 3.2 0 .5-.4.8-.6 1C27.8 5 25 3.6 22 3.6h-1.2c-2 0-4 .7-5.5 2 .3-1.4 1.4-3 4-3.4zM21 20.7c-4 0-7-3.2-7-7v-1.3c0-3.8 3-7 7-7h1c4 0 7 3 7 7v1.2c0 3.8-3 7-7 7h-1zm.5 2c6.3 0 12.6 3 13 10h-12v-2.4c.4-.3.8-.8.8-1.5v-2.4c0-1-.7-1.8-1.8-1.8-1 0-1.8.7-1.8 1.8v2.4c0 .7.4 1 1 1.5v2.5H8.3c.5-7.2 6.8-10.2 13-10.2zM37 73H6v-34h31v34zm4-36H2v-2.6h39v2.7z" fill="#000" />
-                </svg>
+        <div class="home-position-container">
+            <div class="home-image-effect blue-light">
+                <img class="home-image" alt="una mano de un hombre ayuda a una mano de una mujer introducir un voto en una urna" src="img/urnas.jpg" />
+
             </div>
-        </div>
-        <div class="bislai-home-card">
-            <div class="bislai-home-card-element">
-                <h3 class="bislai-home-card-title">ACCESIBILIDAD</h3>
-                <p class="bislai-home-card-element-text">Mostramos de una manera más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos políticos en el <strong>Ayuntamiento de Zaragoza.</strong></p>
-            </div>
-            <div class="bislai-home-card-element">
-                <h3 class="bislai-home-card-title">BUSCADOR</h3>
-                <p class="bislai-home-card-element-text">Busca en todos los plenos por cualquier palabra: ¿agua? ¿bus? ¿bicicleta?</p>
-                <div class="contenedor-buscador">
-                        <form action="/buscador">
-                            <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
-                            <button class="btn-search" type="submit">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                    <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z"/>
-                                </svg>
-                            </button>
-                        </form>
+            <div class="home-position-container-claim">
+                <div class="bislai-icon">
+                    <svg width="43" height="75" viewBox="0 0 43 75" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M42 32.7h-5.7c-.3-5.8-4-10-9.8-11.5 2.6-1.6 4.3-4.4 4.3-7.7v-1.2c0-1.2-.2-2.4-.6-3.4 1.3-1 2-2.8 2.2-5 0-1.4 0-3-1-3.4-.5-.2-1 0-1.2.4-.6.6-2.5.2-4.4-.2-2-.5-4.6-1-6.8-.6-5 1-6 5.3-5.7 7.2-.8 1.5-1.2 3-1.2 4.8v1c0 3.5 2 6.3 4.4 8-5.8 1.6-9.6 5.7-9.8 11.5H1c-.6 0-1 .3-1 1V38c0 .6.4 1 1 1h3v35c0 .4.3.8 1 .8h33c.6 0 1-.4 1-1V39.3h3c.6 0 1-.4 1-1v-4.6c0-.6-.4-1-1-1zM19.4 2c2-.3 4 0 6 .6 2 .5 3.8 1 5.2.4 0 .8 0 2-.5 3.2 0 .5-.4.8-.6 1C27.8 5 25 3.6 22 3.6h-1.2c-2 0-4 .7-5.5 2 .3-1.4 1.4-3 4-3.4zM21 20.7c-4 0-7-3.2-7-7v-1.3c0-3.8 3-7 7-7h1c4 0 7 3 7 7v1.2c0 3.8-3 7-7 7h-1zm.5 2c6.3 0 12.6 3 13 10h-12v-2.4c.4-.3.8-.8.8-1.5v-2.4c0-1-.7-1.8-1.8-1.8-1 0-1.8.7-1.8 1.8v2.4c0 .7.4 1 1 1.5v2.5H8.3c.5-7.2 6.8-10.2 13-10.2zM37 73H6v-34h31v34zm4-36H2v-2.6h39v2.7z" fill="#000" />
+                    </svg>
                 </div>
-            </div>
-            <div class="bislai-home-card-element">
-                <h3 class="bislai-home-card-title">ESTADÍSTICAS</h3>
-                <p class="bislai-home-card-element-text">Recopilamos todas las votaciones y generamos diferentes estadísticas con ellas: tripartitos, ¿quién vota a favor?, ¿quién vota en contra?</p>
+                <span class="home-position-container-title">ACCESIBILIDAD POLÍTICA</span> Fiscalizamos y hacemos más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos en el <strong>Ayuntamiento de Zaragoza.</strong>
+                <p class="home-position-container-text">Busca en los plenos por cualquier palabra: ¿agua? ¿bus? ¿bicicleta?</p>
+                <div class="contenedor-buscador">
+                    <form action="/buscador">
+                        <input placeholder="Busca en cualquier pleno" class="input-buscador" type="text" name="q" id="tipue_search_input">
+                        <button class="btn-search" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" />
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
+    <section class="home-cite-container">
+        <p class="home-cite"><span class="home-cite-quote">“</span>La información es poder. Pero como todo poder, hay quienes quieren mantenerlo para sí mismos. <span class="home-cite-aaron">Aaron Swartz | 1986 - 2013</span></p>
+
+    </section>
     <section class="calendario-plenos">
         <h2 class="maw-60 calendario-plenos-titulo">CALENDARIO DE PLENOS</h2>
         <p class="maw-60 calendario-plenos-texto">Este calendario recoge todas las <strong>mociones ordinarias</strong> que se han presentado desde 2015 en el pleno del Ayuntamiento de Zaragoza.</p>
@@ -130,11 +127,8 @@
             <a href="http://twitter.com/debislai" class="grid-footer-links">TWITTER</a>
             <a href="http://github.com/jorgeatgu/bislai" class="grid-footer-links">GITHUB</a>
         </div>
-
-
-
-            <div class="maw-60">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</div>
-            <p class="maw-60 padding-1-0">© 2016 - 2018 · Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
+        <div class="maw-60">Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</div>
+        <p class="maw-60 padding-1-0">© 2016 - 2018 · Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - hola@bislai.co</p>
         </div>
     </footer>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
