actualizadas las paginas de partidos

--- a/ciudadanos.html
+++ b/ciudadanos.html
@@ -67,7 +67,7 @@
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos. Es el partido que menos votos en contra recibe.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos. Es el partido que menos votos en contra recibe.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 10 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 17 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 4 veces en contra.</p>
@@ -83,7 +83,7 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
 
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado a su favor el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 30 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 12 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 42 veces a su favor.</p>
@@ -99,7 +99,7 @@
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
 
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces se han abstenido el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 7 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 18 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 1 ocasiones.</p>
