--- a/creditos.html
+++ b/creditos.html
@@ -34,39 +34,28 @@
 </div>
         </nav>
     </header>
-    <div class="maw-60 margin-y1 font-s">
+    <div class="maw-60">
 
     <p>Todos los datos de las mociones han sido obtenidos de la web del Ayuntamiento de Zaragoza.</p>
 
-    <p>Esta web no hubiera sido posible sin la generosa ayuda de librerías e iconos distribuídos como open source.</p>
+    <p>Este proyecto no hubiera sido posible sin la generosa ayuda de librerías e iconos distribuídos como open source.</p>
 
-    <h2>Librerías</h2>
-    <ul>
-        <li>Para las gráficas de las mociones he utilizado <a href="https://github.com/c3js/c3">c3.js</a> de Masayuki Tanaka.</li>
-        <li>Para las gráficas de las estadísticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</li>
-        <li>Para la arquitectura CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</li>
-        <li>Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrollado por <a href="http://www.tipue.com">Tipue</a>.</li>
+    <h2 class="credit-title">Librerías</h2>
+    <ul class="credit-list">
+        <li class="credit-list-element">Para las gráficas de las mociones he utilizado <a href="https://github.com/c3js/c3">c3.js</a> de Masayuki Tanaka.</li>
+        <li class="credit-list-element">Para las gráficas de las estadísticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</li>
+        <li class="credit-list-element">Para la arquitectura CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</li>
+        <li class="credit-list-element">Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrollado por <a href="http://www.tipue.com">Tipue</a>.</li>
     </ul>
 
-    <h2>Iconos</h2>
+    <h2 class="credit-title">Iconos</h2>
 
-    <ul>
-        <li>Para la iconografía he utilizado iconos de <a href="material.io/icons/">Material</a>.</li>
-        <li>El icono que acompaña las gráficas de unanimidad ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</li>
-        <li>El icono que acompaña las gráficas de ¿quién ha presentado más mociones ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</li>
-        <li>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dant/">Dant</a> on the @NounProject.</li>
-        <li>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</li>
-        <li>El icono que acompaña las gráficas de votos en contra ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</li>
-        <li>El icono que acompaña las gráficas de votos a favor ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</li>
-        <li>El icono que acompaña las gráficas de abstenciones ha sido diseñador por <a href="https://thenounproject.com/bravo/">Juan Pablo Bravo</a> on the @NounProject.</li>
-        <li>El icono que acompaña las gráficas de ¿quién ha ganado más? y ¿quién ha perdido más? ha sido diseñador por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</li>
-        <li>Podium by Made by Made from the Noun Project</li>
-        <li>President by Made by Made from the Noun Project</li>
-        <li>Podium speech by Juan Pablo Bravo from the Noun Project</li>
-        <li>Photo by Louis Moncouyoux on Unsplash</li>
-        <li>Photo by Lukas from Pexels https://www.pexels.com/photo/charts-on-black-wooden-table-669622/</li>
-        <li>Rocket by Dev Patel from the Noun Project</li>
-        <li>election poll by Made by Made from the Noun Project</li>
+    <ul class="credit-list">
+        <li class="credit-list-element">Podium by <a href="https://thenounproject.com/made.somewhere/">Made by Made</a> from the Noun Project</li>
+        <li class="credit-list-element">President by <a href="https://thenounproject.com/made.somewhere/">Made by Made</a> from the Noun Project </li>
+        <li class="credit-list-element">Photo by <a href="https://unsplash.com/photos/IBWJsMObnnU">Arnaud Jaegers</a> on Unsplash</li>
+        <li class="credit-list-element">Data icon by By <a href="https://thenounproject.com/icon/1540803/">Joey Chen, US</a></li>
+        <li class="credit-list-element">Abstract photo By <a href="https://www.pexels.com/photo/abstract-bright-color-dark-397998/">Mohamed Khaled</a></li>
     </ul>
 
     </div>
