--- a/cha.html
+++ b/cha.html
@@ -74,7 +74,7 @@
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 30 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 7 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 6 veces en contra.</p>
@@ -89,7 +89,7 @@
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado a su favor el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha votado 6 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 43 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 42 veces a su favor.</p>
@@ -104,7 +104,7 @@
             <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces se han abstenido el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Popular</strong> ha optado por la abstención en 17 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 3 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 5 ocasiones.</p>
