--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                 <a class="tabla-calendario-link" href="/plenos/2018/02-03-2018">2 de marzo de 2018</a>
                 <a class="tabla-calendario-link" href="/plenos/2018/26-03-2018">26 de marzo de 2018</a>
                 <a class="tabla-calendario-link" href="/plenos/2018/04-05-2018">4 de mayo de 2018</a>
+                <a class="tabla-calendario-link" href="/plenos/2018/01-06-2018">1 de junio de 2018</a>
+                <a class="tabla-calendario-link" href="/plenos/2018/29-06-2018">29 de junio de 2018</a>
+                <a class="tabla-calendario-link" href="/plenos/2018/27-07-2018">27 de julio de 2018</a>
             </section>
         </article>
     </section>
