--- a/pp.html
+++ b/pp.html
@@ -80,7 +80,7 @@
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA EN SU CONTRA?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado en su contra el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado en su contra el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 61 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 31 veces en contra.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 5 veces en contra.</p>
@@ -95,7 +95,7 @@
             <h2 class="partidos-grafico-titulo">¿QUIÉN VOTA A FAVOR?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces han votado a su favor el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces han votado a su favor el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha votado 6 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha votado 37 veces a su favor.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha votado 59 veces a su favor.</p>
@@ -110,7 +110,7 @@
             <h2 class="partidos-grafico-titulo">¿QUIÉN SE ABSTIENE?
             </h2>
             <span class="partidos-grafico-ciudadanos"></span>
-            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuantas veces se han abstenido el resto de partidos.</p>
+            <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver cuántas veces se han abstenido el resto de partidos.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Zaragoza En Común</strong> ha optado por la abstención en 13 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50">El <strong>Partido Socialista Obrero Español</strong> ha optado por la abstención en 12 ocasiones.</p>
             <p class="partidos-grafico-parrafo maw-50"><strong>Ciudadanos</strong> ha optado por la abstención en 16 ocasiones.</p>
